# vibe-with-google-ai-divorce-agent-inflearn

./: .env_examples  .eslintignore  .gitignore
adk-backend/: README.md  pyproject.toml  update_agent_models.py
adk-backend/src/adk_backend/: app.py  live.py  sessions.py
adk-backend/src/adk_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
adk-backend/src/adk_backend/agents/: __init__.py  divorce_case_domain_expert.py  registry.py
adk-backend/src/adk_backend/agents/base/: __init__.py
adk-backend/src/adk_backend/api/: __init__.py  chat.py  data.py  system.py
adk-backend/src/adk_backend/api/schemas/: chat.py
adk-backend/src/adk_backend/config/: __init__.py  memory.py
adk-backend/src/adk_backend/middleware/: __init__.py  adk_callbacks.py  logging_middleware.py  precedent_cag_loader.py
adk-backend/src/adk_backend/nlp/: ai_client.py  gemini_client.py  prompt_templates.py
adk-backend/src/adk_backend/services/: __init__.py  adk_agent_runner.py  chat_service.py
adk-backend/src/adk_backend/tools/: bigquery.py  conversational_analytics.py  divorce_evidence_tool.py  file_search.py  reasoning_tracker.py
adk-backend/src/adk_backend/utils/: bigquery_helper.py  logging_config.py
adk-backend/src/adk_backend/workflows/: divorce.py
adk-backend/tests/: __init__.py  conftest.py  generate_answer_report.py  quick_test_result.json  test_config.py  test_file_search_tool.py  test_file_search_verification.py  test_live_manager.py  test_rag_agent.py  test_templates_api.py
data/: precedent_stats.json
frontend/: .env.example  .eslintrc.cjs  index.html  package-lock.json  package.json  (+1 more)
(+156 files in other folders)
